--- a/app/views/editorial/pages_contattaci.html.erb
+++ b/app/views/editorial/pages_contattaci.html.erb
@@ -4,7 +4,7 @@
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
           <div class="fs-layout-cell layout-item-0" style="width: 99%">
-            <%= raw(Setting.static_page_progettofs.html_safe) %>
+            <%= raw(Setting.static_page_contattaci.html_safe) %>
           </div>
         </div>
       </div>
