--- a/app/views/editorial/pages_abbonamenti.html.erb
+++ b/app/views/editorial/pages_abbonamenti.html.erb
@@ -5,11 +5,13 @@
         <div class="fs-content-layout-row">
           <div class="fs-layout-cell layout-item-0" style="width: 99%">
             <div id="fs-pag-abbonamenti-header">
-              <% if User.current.logged?  %>
-                <%#	else  %>
-              <div> Entra nel mondo Fiscosport!   <%= link_to "Registrati", url_for(:controller => "account",:action => 'register'), :class => "fs-blu-button"%>
+              <% unless User.current.logged?  %>
+                                  <%#	else  %>
+              <div><h1 class="x-yellow3" style="font-weight: bold;"> Entra anche tu nel mondo Fiscosport!</h1>
+              <p class="x-yellow2">Con l'abbonamento accedi a tutti i contenuti del sito!</p>  <%= link_to "REGISTATI ORA!", url_for(:controller => "account",:action => 'register'), :class => "fs-blu-button"%>
+                                <br>
               </div>
-              <div>Se sei già abbonato fai il login qui sopra / </div>
+
                  <%	end  %>
             </div>
             <%= raw(Setting.static_page_abbonamenti.html_safe) %>
