--- a/app/views/layouts/editorial.html.erb
+++ b/app/views/layouts/editorial.html.erb
@@ -116,10 +116,12 @@
           });
 
           $('.x-white').addGlow({ textColor: 'white', haloColor: '#aaa', radius: 100 });
-          $('.x-blue').addGlow({ textColor: '#00f', haloColor: '#00f', radius: 100 });
-          $('.x-yellow').addGlow({ textColor: '#F8DA00', haloColor: '#F8DA00', radius: 100 });
+          $('.x-blue').addGlow({ textColor: '#00f', haloColor: '#00f', radius: 100, duration: 200 });
+          $('.x-yellow').addGlow({ textColor: '#F8DA00', haloColor: '#F8DA00', radius: 10, duration: 200 });
           $('.x-red').addGlow({ textColor: '#f00', haloColor: '#f00', radius: 100 });
           $('.x-granata').addGlow({ textColor: '#a03823', haloColor: '#a03823', radius: 100 });
+          $('.x-yellow2').addGlow({ textColor: '#000', haloColor: '#F8DA00', radius: 5, duration: 300 });
+          $('.x-yellow3').addGlow({ textColor: '#000', haloColor: '#F8DA00', radius: 10, duration: 300 });
       });
   </script>
   <!-- page specific tags -->
@@ -153,9 +155,10 @@
     <nav class="fs-menu2-nav clearfix">
       <%= render_navigation(:level => 2..3, :expand_all => true) %>
     </nav>
-    <div id="user-info">
-    <%= render_flash_messages %>
-    </div>
+    <% flash.each do |key,msg| %>
+        <p id="fs-fade-flash"> <span class=<%= key.to_s %>></span>
+          <%= msg %>  </p>
+    <% end %>
     <div class="fs-layout-wrapper clearfix">
       <div class="fs-content-layout">
         <div class="fs-content-layout-row">
