--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -23,7 +23,7 @@
 <!-- yui page specific tags -->
 <%= yield :header_yui -%>
 </head>
-<body class="<%=h body_css_classes %>">
+<body class="<%=h body_css_classes %>  yui-skin-sam">
 <div id="wrapper">
 <div id="wrapper2">
 <div id="top-menu">
