register e ajax service paging

--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -3714,3 +3714,5 @@ html>body #ajax-indicator {
     color: red;
     font-weight: bold;
 }
+/*RADIO BUTTON REGISTER*/
+.dvrbt { border: 0px solid red;}
