--- a/app/views/editorial/profilo_show.html.erb
+++ b/app/views/editorial/profilo_show.html.erb
@@ -1,9 +1,4 @@
 <div class="fs-layout-cell fs-content clearfix">
-  <!--
-  <%# if flash[:notice] %>
-   <div id="fs-flash-notice"><%# notice %> </div>
-  <%# end %>
-  -->
   <% if !@user_profile.nil? %>
       <div class="fs-content-layout post-layout-item-0" style="width: 99%">
         <div class="fs-content-layout-row">
@@ -12,7 +7,33 @@
               <div class="fs-profiles-sx">
                 <%= @user_profile.my_avatar(:l) %>
               </div>
+
               <div class="fs-profiles-us">
+                <% unless @user_profile.fs_skype.blank? %>
+                    <%= javascript_include_tag "skype-uri.js" %>
+                    <div id="SkypeButton-conteiner">
+                      <div id="SkypeButton_Call_me">
+                        <script type="text/javascript">
+                            Skype.ui({
+                                "name":"call",
+                                "element":"SkypeButton_Call_me",
+                                "participants":["<%= h @user_profile.fs_skype %>"],
+                                "imageSize":24
+                            });
+                        </script>
+                      </div>
+                      <div id="SkypeButton_Chat_me">
+                        <script type="text/javascript">
+                            Skype.ui({
+                                "name":"chat",
+                                "element":"SkypeButton_Chat_me",
+                                "participants":["<%= h @user_profile.fs_skype %>"],
+                                "imageSize":24
+                            });
+                        </script>
+                      </div>
+                    </div>
+                <% end %>
                 <h3><%= (@user_profile.user.firstname unless !@user_profile.user.firstname) + ' ' + (@user_profile.user.lastname unless !@user_profile.user.lastname) %></h3>
 
                 <p><%= h @user_profile.fs_qualifica %></p>
@@ -35,20 +56,6 @@
                       <%= h @user_profile.fs_fax %></p>
                 <% end %>
 
-                <% unless @user_profile.fs_skype.blank? %>
-                    <p><span> skype </span>&nbsp;<%= h @user_profile.fs_skype %>
-                      <script type="text/javascript" src="http://cdn.dev.skype.com/uri/skype-uri.js"></script>
-                    <div id="SkypeButton_Dropdown_<%= h @user_profile.fs_skype %>_1">
-                      <script type="text/javascript">
-                          Skype.ui({
-                              "name":"dropdown",
-                              "element":"SkypeButton_Dropdown_<%= h @user_profile.fs_skype %>_1",
-                              "participants":["<%= h @user_profile.fs_skype %>"]
-                          });
-                      </script>
-                    </div>
-                    </p>
-                <% end %>
                 <% unless @user_profile.external_url.blank? %>
                     <p><span> sito </span>
 
@@ -73,7 +80,6 @@
               </div>
             </article>
             <br/>&nbsp; <br/>
-            <%# if User.current.ismanager? || ((User.current.isauthor? || User.current.ismanager?) && User.current == @user_profile.user) %>
             <% if User.current.admin? || User.current.ismanager? || User.current == @user_profile.user %>
                 <article class="fs-post-profile fs-article">
                   <p style="text-align: center;">  <%= link_to("modifica", profile_edit_path(@user_profile), :class => "fs-giallo-button") %></p>
