--- a/app/views/issues/_form.html.erb
+++ b/app/views/issues/_form.html.erb
@@ -49,7 +49,7 @@
       <%= l(:content_articolo) %>
     <% end %>
   </b></p>
-      <div ><%= f.cktext_area :description , :width => 675  , :height => 800,  :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %></div>
+      <div id="ck-box-issues" ><%= f.cktext_area :description , :height => 800,  :swf_params => {:assetable_type => 'Test', :assetable_id => 1} %></div>
 <% end %>
 
 </div>
