--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -3,15 +3,15 @@
 <div class="box tabular settings">
 <p><%= setting_text_field :app_title, :size => 30 %></p>
 
-<p class="yui-skin-sam"><%= setting_text_area :welcome_text, :cols => 60, :rows => 5  %></p>
+<p><%= setting_text_area :welcome_text, :cols => 60, :rows => 5  %></p>
 <%# wikitoolbar_for 'settings_welcome_text' %>
 
-<p class="yui-skin-sam"><%= setting_text_area :welcome_text_fs, :cols => 60, :rows => 5 %></p>
+<p><%= setting_text_area :welcome_text_fs, :cols => 60, :rows => 5 %></p>
 <%# wikitoolbar_for 'settings_welcome_text_fs' %>
 </div>
 
 <div class="box tabular settings">
-<p class="yui-skin-sam"><%= setting_text_area :info_fs, :cols => 60, :rows => 5 %></p>
+<p><%= setting_text_area :info_fs, :cols => 60, :rows => 5 %></p>
 <%# wikitoolbar_for 'settings_info_fs' %>
 
 <p><%= setting_check_box :info_promoted_fs %></p>
@@ -54,59 +54,8 @@
 
 <%= submit_tag l(:button_save) %>
 <% end %>
-
-<% content_for :header_yui do %>
-    <%= stylesheet_link_tag 'yui/skin.css', :media => 'all' %>
-    <%= javascript_include_tag "yui/yahoo-dom-event.js" %>
-    <%= javascript_include_tag "yui/element-min.js" %>
-    <%= javascript_include_tag "yui/container_core-min.js" %>
-    <%= javascript_include_tag "yui/menu-min.js" %>
-    <%= javascript_include_tag "yui/button-min.js" %>
-    <%= javascript_include_tag "yui/editor-min.js" %>
-    <%= javascript_include_tag "yui/yui_fs.js" %>
-<% end %>
-<script type="text/javascript" charset="utf-8">
-    (function () {
-        var myConfig1 = {
-            handleSubmit:true,
-            width:'100%',
-            resize:true,
-            animate:true,
-            dompath:true,
-            focusAtStart:false,
-            nodeChangeDelay:false,
-            removeLineBreaks:true,
-            drag:true
-        };
-        init_yui_editor_fs('settings_welcome_text', myConfig1);
-
-        var myConfig2 = {
-            handleSubmit:true,
-            width:'100%',
-            resize:true,
-            animate:true,
-            dompath:true,
-            focusAtStart:false,
-            nodeChangeDelay:false,
-            removeLineBreaks:true,
-            drag:true
-        };
-        init_yui_editor_fs('settings_info_fs', myConfig2);
-
-        var myConfig3 = {
-            handleSubmit:true,
-            width:'100%',
-            resize:true,
-            animate:true,
-            dompath:true,
-            focusAtStart:false,
-            nodeChangeDelay:false,
-            removeLineBreaks:true,
-            drag:true
-        };
-        init_yui_editor_fs('settings_welcome_text_fs', myConfig3);
-
-    })
-            ();
-
+<script type="text/javascript">
+    CKEDITOR.replace('settings_welcome_text',{ toolbar : 'Basic'});
+    CKEDITOR.replace('settings_info_fs',{ toolbar : 'Light'});
 </script>
+
