--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -22,7 +22,7 @@
 <%= yield :header_tags -%>
   <%= javascript_include_tag :ckeditor %>
 </head>
-<body class="<%=h body_css_classes %>  yui-skin-sam">
+<body class="<%=h body_css_classes %>">
 <div id="wrapper">
 <div id="wrapper2">
 <div id="top-menu">
