--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -1,61 +1,52 @@
 <% form_tag({:action => 'edit'}) do %>
+    <div class="box tabular settings">
+      <p><%= setting_text_field :app_title, :size => 60 %></p>
 
-<div class="box tabular settings">
-<p><%= setting_text_field :app_title, :size => 30 %></p>
+      <p><%= setting_text_field :welcome_text_fs, :size => 60  %></p>
 
-<p><%= setting_text_area :welcome_text, :cols => 60, :rows => 5  %></p>
-<%# wikitoolbar_for 'settings_welcome_text' %>
+      <p><%= setting_text_area :welcome_text, :cols => 60, :rows => 5 %></p>
+    </div>
+    <div class="box tabular settings">
+      <p><%= setting_text_area :info_fs, :cols => 60, :rows => 5 %></p>
 
-<p><%= setting_text_area :welcome_text_fs, :cols => 60, :rows => 5 %></p>
-<%# wikitoolbar_for 'settings_welcome_text_fs' %>
-</div>
+      <p><%= setting_check_box :info_promoted_fs %></p>
+    </div>
 
-<div class="box tabular settings">
-<p><%= setting_text_area :info_fs, :cols => 60, :rows => 5 %></p>
-<%# wikitoolbar_for 'settings_info_fs' %>
+    <div class="box tabular settings">
+      <p><%= setting_text_field :attachment_max_size, :size => 6 %> <%= l(:"number.human.storage_units.units.kb") %></p>
 
-<p><%= setting_check_box :info_promoted_fs %></p>
-</div>
+      <p><%= setting_text_field :per_page_options, :size => 20 %><br/>
+        <em><%= l(:text_comma_separated) %></em></p>
 
-<div class="box tabular settings">
-<p><%= setting_text_field :attachment_max_size, :size => 6 %> <%= l(:"number.human.storage_units.units.kb") %></p>
+      <p><%= setting_text_field :per_page_options_fs, :size => 20 %><br/>
+        <em><%= l(:text_comma_separated) %></em></p>
 
-<p><%= setting_text_field :per_page_options, :size => 20 %><br />
-<em><%= l(:text_comma_separated) %></em></p>
+      <p><%= setting_text_field :activity_days_default, :size => 6 %> <%= l(:label_day_plural) %></p>
 
-<p><%= setting_text_field :per_page_options_fs, :size => 20 %><br />
-<em><%= l(:text_comma_separated) %></em></p>
+      <p><%= setting_text_field :host_name, :size => 60 %><br/>
+        <em><%= l(:label_example) %>: <%= @guessed_host_and_path %></em></p>
 
+      <p><%= setting_select :protocol, [['HTTP', 'http'], ['HTTPS', 'https']] %></p>
 
-<p><%= setting_text_field :activity_days_default, :size => 6 %> <%= l(:label_day_plural) %></p>
+      <p><%= setting_select :text_formatting, Redmine::WikiFormatting.format_names.collect { |name| [name, name.to_s] }, :blank => :label_none %></p>
 
-<p><%= setting_text_field :host_name, :size => 60 %><br />
-<em><%= l(:label_example) %>: <%= @guessed_host_and_path %></em></p>
+      <p><%= setting_check_box :cache_formatted_text %></p>
 
-<p><%= setting_select :protocol, [['HTTP', 'http'], ['HTTPS', 'https']] %></p>
+      <p><%= setting_select :wiki_compression, [['Gzip', 'gzip']], :blank => :label_none %></p>
 
-<p><%= setting_select :text_formatting, Redmine::WikiFormatting.format_names.collect{|name| [name, name.to_s]}, :blank => :label_none %></p>
+      <p><%= setting_text_field :feeds_limit, :size => 6 %></p>
 
-<p><%= setting_check_box :cache_formatted_text %></p>
+      <p><%= setting_text_field :file_max_size_displayed, :size => 6 %> <%= l(:"number.human.storage_units.units.kb") %></p>
 
-<p><%= setting_select :wiki_compression, [['Gzip', 'gzip']], :blank => :label_none %></p>
+      <p><%= setting_text_field :diff_max_lines_displayed, :size => 6 %></p>
 
-<p><%= setting_text_field :feeds_limit, :size => 6 %></p>
-
-<p><%= setting_text_field :file_max_size_displayed, :size => 6 %> <%= l(:"number.human.storage_units.units.kb") %></p>
-
-<p><%= setting_text_field :diff_max_lines_displayed, :size => 6 %></p>
-
-<p><%= setting_text_field :repositories_encodings, :size => 60 %><br />
-<em><%= l(:text_comma_separated) %></em></p>
-
-<%= call_hook(:view_settings_general_form) %>
-</div>
-
-<%= submit_tag l(:button_save) %>
+      <p><%= setting_text_field :repositories_encodings, :size => 60 %><br/>
+        <em><%= l(:text_comma_separated) %></em></p>
+      <%= call_hook(:view_settings_general_form) %>
+    </div>
+    <%= submit_tag l(:button_save) %>
 <% end %>
 <script type="text/javascript">
-    CKEDITOR.replace('settings_welcome_text',{ toolbar : 'Basic'});
-    CKEDITOR.replace('settings_info_fs',{ toolbar : 'Light'});
+    CKEDITOR.replace('settings_info_fs', { toolbar:'Light'});
 </script>
 
