--- a/app/views/settings/_notifications.html.erb
+++ b/app/views/settings/_notifications.html.erb
@@ -1,70 +1,52 @@
 <% if @deliveries %>
-<% form_tag({:action => 'edit', :tab => 'notifications'}) do %>
+    <% form_tag({:action => 'edit', :tab => 'notifications'}) do %>
 
-<div class="box tabular settings">
-<p><%= setting_text_field :mail_from, :size => 60 %></p>
+        <div class="box tabular settings">
+          <p><%= setting_text_field :mail_from, :size => 60 %></p>
 
-<p><%= setting_check_box :bcc_recipients %></p>
+          <p><%= setting_check_box :bcc_recipients %></p>
 
-<p><%= setting_check_box :plain_text_mail %></p>
+          <p><%= setting_check_box :plain_text_mail %></p>
 
-<p><%= setting_select(:default_notification_option, User.valid_notification_options.collect {|o| [l(o.last), o.first.to_s]}) %></p>
+          <p><%= setting_select(:default_notification_option, User.valid_notification_options.collect { |o| [l(o.last), o.first.to_s] }) %></p>
 
-</div>
-         <fieldset class="box" id="notified_events"><legend><%=l(:text_select_mail_notifications)%></legend>
-<%= hidden_field_tag 'settings[notified_events][]', '' %>
-<% @notifiables.each do |notifiable| %>
-<%= notification_field notifiable %>
-<br />
-<% end %>
-<p><%= check_all_links('notified_events') %></p>
-</fieldset>
-<fieldset  class="yui-skin-sam"><legend><%= l(:setting_emails_header) %></legend>
-<%= setting_text_area :emails_header, :label => false, :rows => 5 %>
-</fieldset>
-<fieldset  class="yui-skin-sam"><legend><%= l(:setting_emails_footer) %></legend>
-<%= setting_text_area :emails_footer, :label => false, :rows => 5 %>
-</fieldset>
-<div style="float:right;">
-<%= link_to l(:label_send_test_email), :controller => 'admin', :action => 'test_email' %>
-</div>
-<%= submit_tag l(:button_save) %>
-<% end %>
+        </div>
+
+
+        <fieldset class="box" id="notified_events">
+          <legend><%= l(:text_select_mail_notifications) %></legend>
+          <%= hidden_field_tag 'settings[notified_events][]', '' %>
+          <% @notifiables.each do |notifiable| %>
+              <%= notification_field notifiable %>
+              <br/>
+          <% end %>
+          <p><%= check_all_links('notified_events') %></p>
+        </fieldset>   <br/>
+        <div class="box" id="settings-fee">
+          <fieldset>
+            <legend><%= l(:setting_emails_header) %></legend>
+            <%= setting_text_area :emails_header, :label => false, :rows => 5 %>
+          </fieldset>
+          <br/>
+          <fieldset>
+            <legend><%= l(:setting_emails_footer) %></legend>
+            <%= setting_text_area :emails_footer, :label => false, :rows => 5 %>
+          </fieldset>
+          <br/>
+
+          <div style="float:right;">
+            <%= link_to l(:label_send_test_email), :controller => 'admin', :action => 'test_email' %>
+          </div>
+          <%= submit_tag l(:button_save) %>
+        </div>
+    <% end %>
 <% else %>
-<div class="nodata">
-<%= simple_format(l(:text_email_delivery_not_configured)) %>
-</div>
+    <div class="nodata">
+      <%= simple_format(l(:text_email_delivery_not_configured)) %>
+    </div>
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
-    (function () {
-        var myConfig1 = {
-            handleSubmit:true,
-            resize:true,
-            width:'100%',
-            animate:true,
-            dompath:true,
-            focusAtStart:true,
-            nodeChangeDelay:false,
-            removeLineBreaks:true,
-            drag:true
-        };
-        init_yui_editor_fs('settings_emails_header', myConfig1);
-
-        var myConfig2 = {
-            handleSubmit:true,
-            resize:true,
-            width:'100%',
-            animate:true,
-            dompath:true,
-            focusAtStart:false,
-            nodeChangeDelay:false,
-            removeLineBreaks:true,
-            drag:true
-        };
-        init_yui_editor_fs('settings_emails_footer', myConfig2);
-    })
-            ();
-
-
+    CKEDITOR.replace('settings_emails_header', { toolbar:'Basic'});
+    CKEDITOR.replace('settings_emails_footer', { toolbar:'Basic'});
 </script>
