--- a/public/stylesheets/style.plus.css
+++ b/public/stylesheets/style.plus.css
@@ -2053,13 +2053,13 @@ span.error {
 .fe-notice {
     background: url('/images/ico/flash_notice_s.png') center left no-repeat;
     font-weight: bold;
-    padding: 3px 5px 3px 32px;
+    padding: 10px 5px 3px 32px;
     display: table-cell;
     vertical-align: middle;
     font-style: italic;
     color: #005b7c;
-    height: 20px;
-    min-height: 20px;
+    height: 24px;
+    min-height: 24px;
     border-bottom: solid 1px #e0ffff;
 }
 
@@ -2945,13 +2945,13 @@ ul.fs-menu2-hmenu>li.ext.ext-l.ext-r:hover>.ext-m:before {
     -moz-background-origin: border !important;
     background-origin: border-box !important;
     background: #006B92;
-    background: linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
+    background: linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
     background: -webkit-linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
-    background: -moz-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: -o-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: -ms-linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    background: linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
-    -svg-background: linear-gradient(top, #007BA8 0, #007BA8 50%, #0078A3 60%, #005675 100%) no-repeat;
+    background: -moz-linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
+    background: -o-linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
+    background: -ms-linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
+    background: linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
+    -svg-background: linear-gradient(top, #005b7c 0, #006a95 50%, #00678f 60%, #00465e 100%) no-repeat;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
@@ -3649,7 +3649,7 @@ html>body #ajax-indicator {
 .button-next, .finish {
     float: right;
 }
-
+/*
 .button-back, .button-next, .finish {
     border: 1px solid #327E04;
     color: #FFF;
@@ -3669,7 +3669,7 @@ html>body #ajax-indicator {
     border-color: #9FC898;
     color: #9FC898;
 }
-
+  */
 .step {
     border: 1px solid #DDD;
     clear: left;
@@ -3733,4 +3733,46 @@ html>body #ajax-indicator {
 
 #fs_informa {
     padding: 7px;
+}
+.register-switch-item {
+    height: 50px;
+    width: 33%;
+    float:left;
+    display: table-cell;
+    color: #fff;
+    background-color: #00465e;
+}
+.register-switch-item  .fe-notice {
+    border-bottom: none !important;
+
+}
+#register-switch input   , #register-switch span , #register-switch label{
+    display: inline;
+    vertical-align: middle;
+}
+#register-switch input{
+    margin-left: -10px;
+}
+#register-switch span{
+    margin-left: 4px;
+}
+#register-switch{
+    height: 100px;
+}
+#register-switch label{
+   margin: 0 !important;
+    padding: 3px;
+}
+#register-switch p {
+  /*  background-color: #3e89b2;   */
+    width:220px;
+    display: inline-block;
+    vertical-align: middle;
+    padding:0;
+}
+.fs-register{
+    display: block;
+    height: auto;
+    padding: 20px;
+    text-align: center;
 }
