--- a/app/views/fees/registrati.html.erb
+++ b/app/views/fees/registrati.html.erb
@@ -2,26 +2,13 @@
   <div id="footer-menu" class="box">
     <%= render_menu :menu_fee_fs %>
   </div>
-  In questa pagina:
-  <ul>
-    <li>List utenti in stato di registrazione: username, data registrazione, manca x giorni al periodo di prova, data ultimo pagamento</li>
-    <li>Azione: Rilancia</li>
-    <li>Azione: Ha pagato</li>
-    <li>Azione: ROLE_SCADUTO cambia ruolo per renderlo scaduto</li>
-    <li>Azione: ROLE_ARCHIVIA cambia ruolo per archiviare</li>
-    <li>Naviga: vai al dettaglio di un utente</li>
-  </ul>
 
 <% form_tag({}, :method => :get) do %>
 <fieldset><legend><%= l(:label_filter_plural) %></legend>
 
 <label for='role_id'><%= l(:label_role) %>:</label>
-<%= select_tag 'role_id', fee_roles_options_for_select(@roleid), :onchange => "this.form.submit(); return false;"  %>
-<br />
-params[:role_id].to_i:  <%= params[:role_id].to_i %>
-<br />
- @roleid:  <%= @roleid %>
-<br />
+<%= select_tag 'role_id', fee_roles_options_for_select(@roleid), :onchange => "this.form.submit(); return false;"  %><%= "(" + @roleid.to_s + ")" %>
+<%# params[:role_id].to_i o allora @roleid %>
 
 <label for='name'><%= l(:label_user) %>:</label>
 <%= text_field_tag 'name', params[:name], :size => 30 %>
